--- a/common.eo.po
+++ b/common.eo.po
@@ -13,7 +13,7 @@ msgstr ""
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2025-04-19 07:22+0200\n"
 "PO-Revision-Date: 2013-09-12 16:53+0000\n"
-"Last-Translator: Krystian J, 2025\n"
+"Last-Translator: Voltinus <voltinusmail@gmail.com>, 2022\n"
 "Language-Team: Esperanto (http://app.transifex.com/team-xonotic/xonotic/"
 "language/eo/)\n"
 "Language: eo\n"
